--- a/index.html
+++ b/index.html
@@ -1,17 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie-edge">
+  <link href="./css/reset.css" rel="stylesheet" type="text/css">
+  <link href="./css/style.css" rel="stylesheet" type="text/css">
   <title>Calculator</title>
 </head>
+
 <body>
-  <header>
-    <h1>Calculator App</h1>
-  </header>
+  <div id="wrapper" class="wrapper">
+    <header>
+      <h1>Calculator App</h1>
+    </header>
     <main>
-      
+      <div class="calulator-wrapper">
+        <div class="display-container">
+          <div id="display" class="display">9+1000</div>
+          <div class="backspace-container">
+          <button id="backspace" class="backspace">&#8656;</button>
+        </div>
+        </div>
+        <div class="button-container">
+          <button id="clear" class="clear" style="grid-area: clear;">AC</button>
+          <button id="negative" class="negative" style="grid-area: negative;">+/-</button>
+          <button id="percent" class="percent" style="grid-area: percent;">%</button>
+          <button id="divide" class="divide" style="grid-area: divide;">&#247;</button>
+          <button id="seven" class="seven" style="grid-area: seven;">7</button>
+          <button id="eight" class="eight" style="grid-area: eight;">8</button>
+          <button id="nine" class="nine" style="grid-area: nine;">9</button>
+          <button id="multiply" class="multiply" style="grid-area: multiply;">&#215;</button>
+          <button id="four" class="four" style="grid-area: four;">4</button>
+          <button id="five" class="five" style="grid-area: five;">5</button>
+          <button id="six" class="six" style="grid-area: six;">6</button>
+          <button id="minus" class="minus" style="grid-area: minus;">-</button>
+          <button id="one" class="one" style="grid-area: one;">1</button>
+          <button id="two" class="two" style="grid-area: two;">2</button>
+          <button id="three" class="three" style="grid-area: three;">3</button>
+          <button id="plus" class="plus" style="grid-area: plus;">+</button>
+          <button id="zero" class="zero" style="grid-area: zero;">0</button>
+          <button id="decimal" class="decimal" style="grid-area: decimal;">.</button>
+          <button id="equals" class="equals" style="grid-area: equals;">=</button>
+        </div>
+      </div>
     </main>
-  
+    <footer>
+      <p>JavaScript Web Dev 101</p>
+      <a class="odin-link" href="https://www.theodinproject.com/courses/foundations/lessons/calculator" target="_blank">The Odin Project</a>
+      <a class="github-link" href="https://github.com/wingedthing/calculator" target="_blank" ><img src="https://github.githubassets.com/favicons/favicon.png" alt="github logo"></a>
+      
+    </footer>
+  </div>
 </body>
+
 </html>
