fixed some typos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1>Calculator App</h1>
     </header>
     <main>
-      <div class="calulator-wrapper">
+      <div class="calculator-wrapper">
         <div class="display-container">
           <div id="display" class="display"><span id="dis-span" class="dis-span">0</span></div>
           <div class="backspace-container">
