fixed a bug with zero getting entered twice on push

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <button id="two" class="number two" data-value="2" style="grid-area: two;">2</button>
           <button id="three" class="number three" data-value="3" style="grid-area: three;">3</button>
           <button id="plus" class="plus operator" data-value="+" style="grid-area: plus;">+</button>
-          <button id="zero" class="zero number" data-value="0" style="grid-area: zero;">0</button>
+          <button id="zero" class="zero" data-value="0" style="grid-area: zero;">0</button>
           <button id="decimal" class="decimal" data-value="." style="grid-area: decimal;">.</button>
           <button id="equals" class="equals" style="grid-area: equals;">=</button>
         </div>
